Bug #38454
rgw: gc entries with zero-length chains are not cleaned up
% Done:
0%
Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
2 - major
Description
Although rare, garbage collection entries with zero-length chains can arise. Mark Kogan made a reproducer by killing large uploads midway repeatedly. The existing code does not clean these up. These along with other bugs need to be addressed.
Related issues
History
#1 Updated by J. Eric Ivancich about 2 years ago
- Pull request ID set to 26601
#2 Updated by J. Eric Ivancich about 2 years ago
- Status changed from In Progress to Fix Under Review
#4 Updated by Casey Bodley almost 2 years ago
- Related to Bug #38470: Radosg-admin can't delete bucket and radosgw-admin gc process not working (or very slowly) added
#5 Updated by Casey Bodley almost 2 years ago
- Status changed from Fix Under Review to 7
#6 Updated by Matt Benjamin almost 2 years ago
- Priority changed from Normal to High
#7 Updated by J. Eric Ivancich almost 2 years ago
- Status changed from 7 to Pending Backport
#8 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #38713: mimic: rgw: gc entries with zero-length chains are not cleaned up added
#9 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #38714: luminous: rgw: gc entries with zero-length chains are not cleaned up added
#10 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".