src/cls/rgw/cls_rgw.cc
@@ -3136,23 +3136,36 @@ static int gc_update_entry(cls_method_context_t hctx, uint32_t expiration_secs,
       return ret;
     }
   }
+
+  // calculate time and time key
   info.time = ceph::real_clock::now();
   info.time += make_timespan(expiration_secs);
+  string time_key;
+  get_time_key(info.time, &time_key);
+
+  if (info.chain.objs.empty()) {
+    CLS_LOG(0,
+	    "WARNING: %s setting GC log entry with zero-length chain, "
+	    "tag='%s', timekey='%s'",
+	    __func__, info.tag.c_str(), time_key.c_str());
+  }
+
   ret = gc_omap_set(hctx, GC_OBJ_NAME_INDEX, info.tag, &info);
   if (ret < 0)
     return ret;
 
-  string key;
-  get_time_key(info.time, &key);
-  ret = gc_omap_set(hctx, GC_OBJ_TIME_INDEX, key, &info);
+  ret = gc_omap_set(hctx, GC_OBJ_TIME_INDEX, time_key, &info);
   if (ret < 0)
     goto done_err;
 
   return 0;
 
 done_err:
-  CLS_LOG(0, "ERROR: gc_set_entry error info.tag=%s, ret=%d\n", info.tag.c_str(), ret);
+
+  CLS_LOG(0, "ERROR: gc_set_entry error info.tag=%s, ret=%d\n",
+	  info.tag.c_str(), ret);
   gc_omap_remove(hctx, GC_OBJ_NAME_INDEX, info.tag);
+
   return ret;
 }
 
@@ -3209,9 +3222,16 @@ static int rgw_cls_gc_defer_entry(cls_method_context_t hctx, bufferlist *in, buf
   return gc_defer_entry(hctx, op.tag, op.expiration_secs);
 }
 
-static int gc_iterate_entries(cls_method_context_t hctx, const string& marker, bool expired_only,
-                              string& key_iter, uint32_t max_entries, bool *truncated,
-                              int (*cb)(cls_method_context_t, const string&, cls_rgw_gc_obj_info&, void *),
+static int gc_iterate_entries(cls_method_context_t hctx,
+			      const string& marker,
+			      bool expired_only,
+                              string& key_iter,
+			      uint32_t max_entries,
+			      bool *truncated,
+                              int (*cb)(cls_method_context_t,
+					const string&,
+					cls_rgw_gc_obj_info&,
+					void *),
                               void *param)
 {
   CLS_LOG(10, "gc_iterate_range");
@@ -3248,10 +3268,12 @@ static int gc_iterate_entries(cls_method_context_t hctx, const string& marker, b
     if (ret < 0)
       return ret;
 
-
     map<string, bufferlist>::iterator iter = keys.begin();
-    if (iter == keys.end())
+    if (iter == keys.end()) {
+      if (truncated)
+	*truncated = false;
       break;
+    }
 
     for (; iter != keys.end(); ++iter) {
       const string& key = iter->first;
@@ -3265,8 +3287,11 @@ static int gc_iterate_entries(cls_method_context_t hctx, const string& marker, b
 	return 0;
       }
 
-      if (!key_in_index(key, GC_OBJ_TIME_INDEX))
+      if (!key_in_index(key, GC_OBJ_TIME_INDEX)) {
+	if (truncated)
+	  *truncated = false;
 	return 0;
+      }
 
       ret = gc_record_decode(iter->second, e);
       if (ret < 0)
